refactor(01): honeycomb testing — 4 tests across 2 files, WireMock once
- DeparturesServiceTest: inside-out with WireMock (service + client + deserialization)
- DeparturesIntegrationTest: MockMvc with stubbed service (HTTP layer only)
- Delete StibWaitingTimesResponseTest (covered by WireMock service test)